fixed the css gap issue

--- a/agentassist/src/app/pages/coaching/coaching.component.scss
+++ b/agentassist/src/app/pages/coaching/coaching.component.scss
@@ -453,7 +453,7 @@
         }
         .search-data-input{
             position: absolute;
-            right: 264px;
+            right: 143px;
             width: 220px;
             top: 20px;
             margin: 0;
