--- a/agentassist/src/app/pages/guided-checklist/primary-checklist/primary-checklist.component.scss
+++ b/agentassist/src/app/pages/guided-checklist/primary-checklist/primary-checklist.component.scss
@@ -234,7 +234,7 @@
             margin: 0;
             padding: 0;
             position: absolute;
-            right: 276px;
+            right: 200px;
             top: -48px;
             z-index: 1;
             width: 220px;
